--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <div>
             <h1 id="titolo">Internet deve essere al servizio del "Bene pubblico": Il manifesto di Tim Berners-Lee</h1>
             <p>Scritto da <span id="booleaner">The Booleaner</span><br>
-                il 10/10/2020
+                <span id="data">il 10/10/2020</span>
             </p>
         </div>
     </header>
+    <!--Chiusura header-->
     <main>
         <div>
             <img src="./img/tim-1.jpg" alt="">
@@ -58,11 +59,19 @@
                 </tr>
             </tbody>
         </table>
+        <!--Chiusura tabella-->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta maiores repudiandae cumque dolorem aperiam quasi blanditiis? <span class="sottolineare">Quibusdam porro esse atque, aliquam omnis quisquam non aut? Aspernatur vero minus quaerat iste.</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugit architecto magni facere dolorum nihil obcaecati eum alias nisi quos voluptatum perferendis sapiente, quia, dolore laborum ratione natus minima a? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quaerat porro alias tenetur dicta laudantium rerum explicabo numquam in. Nemo voluptatibus iusto illum tenetur debitis pariatur et aperiam iste sed.</p>
     </main>
-
-        
-
-    <footer></footer>
-    
+    <!-- Chiusura main -->
+    <footer>
+        <h3>Potrebbero interessarti</h3>
+        <div id="bloccofinale1">
+            Lorem ipsum dolor
+        </div>
+        <div id="bloccofinale2">
+            Lorem ipsum dolor
+        </div>
+    </footer>
+    <!-- Chiusura footer -->
 </body>
 </html>
